package org.binu.ai.boardscoring;

/**
 * Calculate the better of the move.
 */
public interface IMoveAnalyser {
    int findBestMove();
}
