@startuml

hide empty fields
hide empty method

interface IGameAI {
    + calculateNextMove()
}
abstract class GameAI extends IGameAI {
    ~ Board board
    ~ BlockQueue blockQueue

}

class SimpleGameAI extends GameAI {

}

class BoardScoringGameAI extends GameAI {
}

class IMoveAnalyser {
    + checkPossibleMoves()
    + suggestNextMove()
}

class MoveAnalyserImpl implements IMoveAnalyser{
}

interface IBoardScoreCalculator {
   + int calculateBoardScore()
}

class BoardScoreCalculatorImpl implements IBoardScoreCalculator {

}

interface IBoardCollapser {
    + collapseBoard()
}

class BoardCollapserImpl implements IBoardCollapser{
    + collapseBoard()
}

interface IBoardClearer {
    + clearBoard()
}

class BoardClearerImpl implements IBoardClearer {
}

BoardScoringGameAI --> IMoveAnalyser
IMoveAnalyser --> IBoardScoreCalculator
IBoardScoreCalculator --> IBoardCollapser
IBoardCollapser --> IBoardClearer
@enduml